Clean up - constants, better error handling, remove comments.